# histori-evm-scraper-rust

./: .env.example  Cargo.toml  README.md  diesel.toml
migrations/2024-09-15-164338_allowances_1/: down.sql  up.sql
src/: constants.rs  db.rs  esscrypt.code-workspace  main.rs  parser.rs  schema.rs  token_service.rs  utils.rs
src/abis/: erc1155_abi.json  erc721_abi.json  erc777_abi.json
src/handlers/: erc1155.rs  erc20.rs  erc721.rs  erc777.rs  mod.rs
src/models/: allowance.rs  balance.rs  mod.rs  token.rs  token_id.rs  token_supply.rs
