[package]
name = "histori_evm_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }

diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
hex-literal = "0.4.1"
once_cell = "1.19.0"
ethers = { version="2.0.14", features = ["abigen"]}
futures = "0.3.30"

log = "0.4"
env_logger = "0.11.5"  # Alternatively, use flexi_logger for more advanced logging features

primitive-types = "0.12"